# my-restaurant-api

./: .dev.env  .env  .surrealdb  Cargo.toml  Containerfile.dev  compose.dev.yaml
.devcontainer/: devcontainer.json
migrations/definitions/: _initial.json
schemas/: evaluated.surql  friends_with.surql  read_recipe.surql  recipes.surql  users.surql
src/: auth.rs  auth_operator.rs  main.rs  routes.rs  shared_types.rs
src/routes/: auth.rs  profile.rs  recipes.rs  users.rs
src/routes/profile/: edit_profile.rs
