[package]
name = "my-restaurant-api"
version = "0.1.0"
edition = "2021"

[dependencies]
aide = { version = "0.13.4", features = ["axum", "scalar", "macros", "axum-extra"] }
async-trait = "0.1.83"
axum = {version = "0.7.9", features = ["macros", "ws"]}
axum-error-handler = "0.1.1"
axum-extra = {version = "0.9.6", features = ["typed-header"]}
chrono = {version = "0.4.39", features = ["serde"]}

jsonwebtoken = "9.3.0"
password-auth = "1.0.0"

schemars = "0.8.21"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
surrealdb = "2.1.2"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
